Add js/css files
Create node that injects the script functionality.
Current issue: Doesn't support the local-file url schema.
Maybe inline like other extension.
But then the data would have to be loaded multiple times, if re-used on multiple sites...
Still, at least I can see the window now :)

--- a/initial_test.ipynb
+++ b/initial_test.ipynb
@@ -33,14 +33,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docutils import nodes\n",
+    "c = nodes.container(command=\"python -V\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': [],\n",
+       " 'classes': [],\n",
+       " 'names': [],\n",
+       " 'dupnames': [],\n",
+       " 'backrefs': [],\n",
+       " 'command': 'python -V'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;31mInit signature:\u001b[0m \u001b[0mnodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontainer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrawsource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mattributes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInit signature:\u001b[0m \u001b[0mnodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madmonition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrawsource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mattributes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mDocstring:\u001b[0m     \n",
       "`Element` is the superclass to all specific elements.\n",
       "\n",
@@ -74,7 +109,7 @@
       "    element += [node1, node2]\n",
       "\n",
       "This is equivalent to ``element.extend([node1, node2])``.\n",
-      "\u001b[0;31mSource:\u001b[0m         \u001b[0;32mclass\u001b[0m \u001b[0mcontainer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGeneral\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mElement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSource:\u001b[0m         \u001b[0;32mclass\u001b[0m \u001b[0madmonition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAdmonition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mElement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFile:\u001b[0m           ~/.cache/pypoetry/virtualenvs/asciinema-sphinx-vB6_R_IB-py3.9/lib/python3.9/site-packages/docutils/nodes.py\n",
       "\u001b[0;31mType:\u001b[0m           type\n",
       "\u001b[0;31mSubclasses:\u001b[0m     \n"
@@ -82,8 +117,24 @@
     }
    ],
    "source": [
-    "from docutils import nodes\n",
-    "nodes.container??"
+    "nodes.admonition??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `nodes.document` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nodes.document??"
    ]
   },
   {
