Support for file-creation!

--- a/initial_test.ipynb
+++ b/initial_test.ipynb
@@ -43,27 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ids': [],\n",
-       " 'classes': [],\n",
-       " 'names': [],\n",
-       " 'dupnames': [],\n",
-       " 'backrefs': [],\n",
-       " 'command': 'python -V'}"
+       "CompletedProcess(args=['/bin/sh'], returncode=0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.attributes"
+    "import subprocess\n",
+    "\n",
+    "subprocess.Popen([\"/bin/sh\"], )"
    ]
   },
   {
