Reached desired functionality :tada:

--- a/initial_test.ipynb
+++ b/initial_test.ipynb
@@ -413,6 +413,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sphinx_auto_asciinema.asciinema_player_settings import AsciinemaPlayerSettings\n",
+    "\n",
+    "a = AsciinemaPlayerSettings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['autoplay', 'rows', 'cols', 'preload', 'loop', 'startat', 'speed', 'idletimelimit', 'theme', 'poster', 'fit', 'fontsize'])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.__fields__.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'autoplay': ModelField(name='autoplay', type=bool, required=False, default=False),\n",
+       " 'rows': ModelField(name='rows', type=PositiveInt, required=False, default=24),\n",
+       " 'cols': ModelField(name='cols', type=PositiveInt, required=False, default=80),\n",
+       " 'preload': ModelField(name='preload', type=bool, required=False, default=False),\n",
+       " 'loop': ModelField(name='loop', type=Union[bool, PositiveInt], required=False, default=False),\n",
+       " 'startat': ModelField(name='startat', type=Union[str, PositiveInt], required=False, default=0),\n",
+       " 'speed': ModelField(name='speed', type=PositiveFloat, required=False, default=1.0),\n",
+       " 'idletimelimit': ModelField(name='idletimelimit', type=Optional[PositiveFloat], required=False, default=None),\n",
+       " 'theme': ModelField(name='theme', type=AsciinemaTheme, required=False, default=<AsciinemaTheme.monokai: 'monokai'>),\n",
+       " 'poster': ModelField(name='poster', type=Optional[str], required=False, default=None),\n",
+       " 'fit': ModelField(name='fit', type=AsciinemaFit, required=False, default=<AsciinemaFit.width: 'width'>),\n",
+       " 'fontsize': ModelField(name='fontsize', type=str, required=False, default='small')}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# AsciinemaPlayerSettings.__fields__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
